tests/invalid/Template_Invalid_26.whiley
method equals<a>(&a:int x, &a:int y) -> bool:
    return x == y
